--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.13",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@types/js-cookie": "^3.0.4",
     "axios": "^1.5.1",
     "js-cookie": "^3.0.5",
     "next": "13.5.4",
