--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://34.194.114.40:8090
+# NEXT_PUBLIC_BASE_URL=http://34.194.114.40:8090
+NEXT_PUBLIC_BASE_URL=http://3.87.8.141
