--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 
+
 # testing
 /coverage
 
@@ -23,6 +24,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# yarn lock 
+yarn.lock
+yarn-error.log
 
 # local env files
 # .env*.local
