--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # yarn lock 
-/yarn.lock
-/yarn-error.log
+yarn.lock
+yarn-error.log
 
 # local env files
 # .env*.local
