--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # NEXT_PUBLIC_BASE_URL=http://34.194.114.40:8090
 # NEXT_PUBLIC_BASE_URL=http://3.87.8.141
 
-NEXT_PUBLIC_BASE_URL=34.225.48.149:8090
+NEXT_PUBLIC_BASE_URL=http://34.225.48.149:8090
